Sidebar leftsidebar 디폴트 설정, webzine 클래스 추가 (중요)

--- a/wp-content/themes/storevilla/style.css
+++ b/wp-content/themes/storevilla/style.css
@@ -3172,10 +3172,10 @@ right sidebar
 left sidebar
 ==================
 */
-.leftsidebar #secondaryleft {
+.webzine #secondaryleft, .leftsidebar #secondaryleft {
     float: left;
 }
-.leftsidebar #primary {
+.webzine #primary, .leftsidebar #primary {
     float: right;
 }
 /*
