sidebar 백단 최종, 메뉴복사 플러그인 추가

--- a/wp-content/themes/storevilla/style.css
+++ b/wp-content/themes/storevilla/style.css
@@ -3140,7 +3140,7 @@ inner pages css
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 */
 #primary {
-    float: left;
+    float: right;
     width: 70%;
 }
 #secondaryright {
